# TextureDump

./: .gitmodules  CMakeLists.txt  CallbackFunctions.h  LICENSE  NamedTexture.h  README.md  SaveData.h  SavingStrategiesImpl.h  Utils.h  main.cpp
src/: CallbackFunctions.h  ISavingStrategy.h  SavingStrategiesImpl.h  StrategyManager.h  main.cpp
